# ayxtrader-back

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  README-EN.md  README.md  docker-compose.yml  find_error.py  find_error2.py  find_error3.py  index.html  pyproject.toml  start-trendradar.sh  test_ai_analysis.py  test_ai_analysis_result.json  test_ai_analysis_verify.py  test_ai_config.py  test_ai_debug.py  test_keywords.py  test_keywords_detailed.py  test_provider_prefix.html  test_rss_crazycapital_diagnosis.py  test_rss_gzh_diagnosis.py  test_rss_keywords.py  version
aiyxdata_tradar/: __init__.py  __main__.py  context.py
config/: config.yaml  frequency_words.txt  timeline.yaml
docker/: Dockerfile  Dockerfile.mcp  docker-compose-build.yml  docker-compose.yml  entrypoint.sh  manage.py  requirements-main.txt  server.py  server_local.py
docs/: 202603071010 Visual_Config_Integration_Manual.md  202603081855_Architecture_Baseline.md  202603101128 Project_Retrospective.md  202603131115_Universal_Timestamps_Plan.md  202603131205 Development_Retrospective.md  202604090857_TrendRadar_Technical_Analysis.md  202604201430_WeChat_OAuth_User_Management_Implementation.md  202604251430 Homepage_Technical_Documentation.md  202605121330 Homepage_Development_Documentation.md  202605180824 Claude_Code_Plugins_Configuration_Report.md  202605181020_TrendRadar_Commercialization_Development_Deployment_Plan.md  202605251430_TrendRadar_Commercialization_Open_Discussion.md  AI_MODEL_QUERY_FEATURE.md  MYZAKER_PAGE_ANALYSIS.md  NEW_REPO_MIGRATION.md  VERIFICATION.md  (+4 more)
(+72 files in other folders)
